@@ -213,8 +213,17 @@ bad input word by one TRY character. The parameter of TRY is case sensitive.
 .IP "NOSUGGEST flag"
 Words signed with NOSUGGEST flag are not suggested. Proposed flag
 for vulgar and obscene words (see also SUBSTANDARD).
+.IP "MAXCPDSUGS num"
+Set max. number of suggested compound words (generated by compound rules). (The number of 
+the suggested compound words may be greater from the same 1-character distance type.)
 .IP "MAXNGRAMSUGS num"
-Set number of n-gram suggestions. Value 0 switches off the n-gram suggestions.
+Set max. number of n-gram suggestions. Value 0 switches off the n-gram suggestions
+(see also MAXDIFF).
+.IP "MAXDIFF [0-10]"
+Set the similarity factor for the n-gram suggestions (5 = default value, 0 = few, but min. 1,
+10 = MAXNGRAMSUGS n-gram suggestions).
+.IP "ONLYMAXDIFF"
+Removing all bad ngram suggestions is allowed (default mode keeps one, see MAXDIFF).
 .IP "NOSPLITSUGS"
 Disable split-word suggestions.
 .IP "SUGSWITHDOTS"
@@ -309,7 +318,9 @@ bracket expression yet. Dash expression has signed bytes and not
 UTF-8 characters yet.
 .IP "WARN flag"
 This flag is for rare words, wich are also often spelling mistakes,
-see option -r of command line Hunspell.
+see option -r of command line Hunspell and FORBIDWARN.
+.IP "FORBIDWARN"
+Words with flag WARN aren't accepted by the spell checker using this parameter.
 .SH "OPTIONS FOR COMPOUNDING"
 .IP "BREAK number_of_break_definitions"
 .IP "BREAK character_or_character_sequence"
